--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [],
+            "args": ["first.txt" , "second.txt" , "third.txt" , "forth.txt"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
